--- a/app/globals.css
+++ b/app/globals.css
@@ -3,40 +3,199 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 200 20% 98%;
-    --btn-background: 200 10% 91%;
-    --btn-background-hover: 200 10% 89%;
-    --foreground: 200 50% 3%;
+  /*:root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
   }
 
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --background: 200 50% 3%;
-      --btn-background: 200 10% 9%;
-      --btn-background-hover: 200 10% 12%;
-      --foreground: 200 20% 96%;
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }/*/
+
+  /*:root {
+    --background:   236 239 244;
+    --background-light: 248 250 252;
+    --background-lighter: 236 239 244;
+    --background-lightest: 219 222 230;
+    --background-primary: 77 70 220;
+    --background-primary-light: 224 225 254;
+    --background-warning: 225 181 62;
+    --background-info: 77 70 220;
+    --background-accent: 236 239 244;
+    --background-red: 254 247 247;
+    --text: 32 41 58;
+    --text-primary: 99 102 241;
+    --text-secondary: 99 102 241;
+    --text-secondary-light: 37 99 235;
+    --text-muted: 100 116 139;
+    --text-dark: 17 23 41;
+    --text-warning: 230 121 38;
+    --text-on-primary: 255 255 255;
+    --text-muted-on-primary: 151 162 182;
+    --text-red: 220 70 70;
+    --border-gray: 207 212 222;
+  }
+  
+  .dark {
+    --background: 17 23 41;
+    --background-light: 32 41 58;
+    --background-lighter: 44 56 79;
+    --background-lightest: 54 74 102;
+    --background-primary: 77 70 220;
+    --background-primary-light: 77 70 220;
+    --background-warning: 225 181 62;
+    --background-info: 77 70 220;
+    --background-accent: 104 4 231;
+    --background-red: 54 40 55;
+    --text: 255 255 255;
+    --text-primary: 136 131 232;
+    --text-secondary: 130 161 248;
+    --text-secondary-light: 191 219 254;
+    --text-muted: 163 172 190;
+    --text-dark: 17 23 41;
+    --text-warning: 225 181 62;
+    --text-on-primary: 255 255 255;
+    --text-muted-on-primary: 197 205 222;
+    --text-red: 241 95 95;
+    --border-gray: 51 59 74;
+  }*/
+
+  #pwa-install {
+    position: relative;
+    z-index: 9999;
+  }
+  
+  .grecaptcha-badge {
+    visibility: hidden;
+    display: none;
+  }
+  
+  .highlighted {
+    @apply relative after:pointer-events-none after:absolute after:left-0 after:top-0 after:h-full after:w-full after:rounded-2xl after:bg-background-primary/20;
+  }
+  .highlighted::after {
+    animation: highlighted-blue 4s ease-in-out 1;
+  }
+  .dark .highlighted {
+    @apply after:hidden;
+    animation: highlighted 4s ease-in-out 1;
+  }
+  @keyframes highlighted-blue {
+    0% {
+      opacity: 0;
+    }
+    3% {
+      opacity: 1;
+    }
+    15% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
     }
   }
+  @keyframes highlighted {
+    3% {
+      filter: brightness(1.4);
+    }
+    15% {
+      filter: brightness(1.4);
+    }
+  }
+  
+  @layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+     scrollbar-width: none; /* Firefox */
+    
+  }}
 }
 
-@layer base {
+
+.embla {
+
+  
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+.embla__container {
+ 
+  -webkit-tap-highlight-color: transparent;
+ 
+  height: 400px;
+
+}
+.embla__slide {
+
+  height: 100%;
+ 
+}
+
+/*@layer base {
   * {
-    @apply border-foreground/20;
+    @apply border-border;
   }
-}
+  body {
+    @apply bg-background text-foreground;
+  }
+}*/
 
-.animate-in {
-  animation: animateIn 0.3s ease 0.15s both;
-}
-
-@keyframes animateIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
